src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  min-width: 320px;
  min-height: 100vh;
  background: url('./assets/background.jpg') center/cover no-repeat;
  overflow: hidden;
}

/* Animations */
@keyframes slideInFromRight {
  0% {
    transform: translateX(30%);
    opacity: 0%;
  }
  100% {
    transform: translateX(0);
    opacity: 100%;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 30%;
  }
  100% {
    opacity: 100%;
  }
}

.slide-in {
  animation: slideInFromRight 2s ease-in-out;
}

.slide-in-2 {
  animation: slideInFromRight 2.2s ease-in-out;
}

.fade-in {
  animation: fadeIn 2s ease-in-out;
}

.items-container {
    display: grid;
    justify-items: center;
    grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
}

